--- a/PasswordManager/PasswordManager/PasswordManager.csproj
+++ b/PasswordManager/PasswordManager/PasswordManager.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>asterisk.ico</ApplicationIcon>
-    <Win32Resource />
+    <Win32Resource></Win32Resource>
   </PropertyGroup>
 
   <ItemGroup>
